--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@ abotonar
 abrazado
 abrazador
 abrazar
-abrazar
 abrazo
 ábrego
 abrelatas
@@ -805,8 +804,8 @@ años
 apache
 apagador
 apagar
+apagar la luz
 aplaudir
-Apan
 apapachar
 aparato circulatorio
 aparato digestivo
@@ -1023,7 +1022,7 @@ asar
 asco
 asedo
 asenso
-asentarse
+sentarse
 aserradero
 aserrín
 asesino
@@ -1259,8 +1258,7 @@ baile
 baile
 Baja California
 Baja California Sur
-bajo
-bajo
+bajar
 bajo
 bala
 balacera
@@ -2415,6 +2413,7 @@ confeción
 confederación
 confederado
 confesar
+confesarse
 confesionario
 confianza
 confiar
@@ -2496,6 +2495,7 @@ contaminación
 contaminado
 contaminado
 contaminante
+contar
 contar a otro
 contemplación
 contemplación
@@ -2688,7 +2688,7 @@ cuajarse
 cuajilote
 Cuajimalpa
 cuajo
-cualquier persona
+cualquiera
 cualquier
 cuándo
 cuando
@@ -2746,6 +2746,7 @@ cuidadoso
 cuidar
 cuitlacoche
 culantrillo
+culpa
 cultivar
 cultivo de abejas mieleras
 cultivo de caña
@@ -3001,6 +3002,7 @@ descubrir
 descuidado
 descuidar
 descuido
+desde
 desdichado
 desear
 desechar
@@ -3392,7 +3394,6 @@ dorar
 dorar
 dormido
 dormido
-dormirucho
 dormir
 dormirse
 dormitar
@@ -3771,11 +3772,7 @@ entorpecido
 entorpecimiento
 entrada
 entrañable
-entrar por la puerta 
-entrar por todas partes
 entrar
-entre algunos
-entre algunos
 entre árboles
 entre el agua
 entre ellos
@@ -5188,8 +5185,6 @@ lavadora
 lavadora de ropa
 lavanda
 lavar
-lavarse la boca
-lavarse lasanos
 lazado
 lazar
 lazo
@@ -5203,7 +5198,6 @@ lechuga
 lechuza
 lechuza
 lector
-leer libros
 leer
 legado
 legado de la ciudad
@@ -5322,6 +5316,7 @@ Letonia
 letra
 levadura
 levantado
+levantarse
 levantador de pesas
 levantamiento
 levantamiento
@@ -5391,6 +5386,7 @@ limosna 
 limosnero 
 limpiar
 limpiar
+limpiar la casa
 limpiar la boca
 linaza
 lince
@@ -7886,15 +7882,10 @@ sexto
 sexual 
 sexualidad
 short
-shoshón
-sí
-sí
 si alguién
 si no 
 sí
-si
 sialorrea
-SIDA
 siempre
 sien
 sierra
@@ -7905,7 +7896,6 @@ significar
 signo de interrogación 
 signo del día
 signo
-Sihuatán
 Sihuatepeque
 silencio
 silla ancha
@@ -8825,18 +8815,9 @@ vencedor
 vencedor
 vencer
 vencido
-vendedor de libros
-vendedor de papel
-vendedor de perfumes
-vendedor de pinturas
-vendedor de ropa
-vendible
-vendible 
+vender
 veneno
-venenoso
-venezolano
 venezolano 
-Venezuela
 venganza
 vengarse
 venir
@@ -8845,10 +8826,8 @@ ventaja
 ventana
 ventanal
 Venus
-ver a alguien
 ver detenidamente
 ver entre sueños
-ver
 ver
 Veracruz
 veracruzano
@@ -8881,6 +8860,7 @@ vestíbulo
 vestido
 vestigio
 vestir
+vestirse
 vestuario
 veterinario
 vetido de luto
@@ -9144,7 +9124,6 @@ tlatlaxiliztli
 totomilihui
 napalolli
 napaloani
-napaloa
 nahuatequi
 tenahuatequiliztli
 amilpampa ehecatl
@@ -9161,7 +9140,7 @@ abrilli
 camacholoa
 malpatzoa
 ixpoa
-poa
+tlapoa
 tlatlapilli
 tlapia
 chicalotl
@@ -9826,8 +9805,8 @@ xiuhtin
 apachtli
 tlazehuiani
 cehui
-matzatzini
-Apan
+tlahuilcehuia
+motlatlaxcaloa
 apapachoa
 ezpanquetl
 itipanquetl
@@ -10096,7 +10075,7 @@ yolizmatqui
 tlecolizcayotl
 mamahtiloc
 mamahtli
-mohtia
+temauhtia
 momauhtia
 petlachiuhqui
 aompac
@@ -10272,7 +10251,7 @@ axolomichin
 Bahamah
 anepalco
 Bahrain
-totia
+mihtotia
 nahua
 macehuani
 mitotiani
@@ -10280,9 +10259,8 @@ mitotiliztli
 mitotilli
 Mexicatl California
 Mexicatl California Huitztlan
-amotlacpac
+temo
 ahuatetztli
-amo cuauhtic
 tepoztlachtli
 mictotopotztli
 ohtlachialotl
@@ -10417,7 +10395,7 @@ Bermudiah
 Bernia
 tetzmazatl
 atezquilitl
-tenamiqui
+tetenamiqui
 tempitzoa
 tempitzoliztli
 atlacamani
@@ -10614,7 +10592,7 @@ huetzcac
 axnotl
 tlatemoalli
 tlatemoani
-temoa
+tlatemoa
 tlatemoliztli
 atlancalaqui
 huelizqui
@@ -10756,8 +10734,8 @@ cameyotl
 cuemitl
 tapechtli
 ohtocac
-nenemini
-nenemi
+nehnemini
+nehnemi
 nenemiliztli
 ohtlatzacuhtli
 ohtli
@@ -11033,7 +11011,7 @@ xictli (amopohualli)
 tlatzacualli
 ilpicayotl
 tlapepecholiztli
-tzacua
+tlatzacua
 tetzolihui
 camapiqui
 mapiqui
@@ -11251,7 +11229,7 @@ nochiztli
 ixcalli
 tlacualchihualoyan
 tlacualcalli
-tlacualchihuilia
+tlacualchihua
 tlacuani
 tlacualchiuhqui
 cocotl
@@ -11325,7 +11303,7 @@ nequi
 tlacualoyan
 pozati
 apitzti
-cua
+tlacua
 tlacemanqui
 pochtecatl
 cemana
@@ -11436,6 +11414,7 @@ tlayolmelahualiztli
 alteptlatzcoztli
 altepetlatzconi
 yolmelahua
+yolcuitia
 neyolmelahualoni
 temachyotl
 temachi
@@ -11517,6 +11496,7 @@ tlalpopochtli
 temauhqui
 temahualli
 temahuani
+pohua
 pohuilia
 acohuehuetiliztli
 acoyaliztli
@@ -11598,7 +11578,7 @@ motlaloani
 tlahuelalilia
 amatlacuiloloyan
 amatlacuiliztli
-paina
+tlaloa
 toca
 chololli
 cuicatlayehualtilli
@@ -11709,7 +11689,7 @@ tlatzacuania
 cuauhxilotl
 Cuauhximalpan
 tlatzacuaniliztli
-aquinzazo
+ahquinzazo
 tlenzazo
 queman
 ihcuac
@@ -11767,6 +11747,7 @@ netlacuitlahuini
 tlacuitlahuia
 cuitlacochin
 tlaquequetzatl
+tlahtlahco
 tlamehua
 mimiahuacaxitl
 ohuayotl
@@ -12022,6 +12003,7 @@ nextia
 yoloquimalli
 yoloquimatia
 yoloquimatiliztli
+ihuicpa
 atlehuelli
 elehuia
 payanca
@@ -12413,7 +12395,6 @@ totpoa
 ixcati
 cochmiqui
 cochtli
-tequicochi
 cochi
 cochquia
 cochtica
@@ -12792,11 +12773,7 @@ ixtlapaltililli
 ixtlapaltiliztli
 calaquian
 yolicniuh
-calacoa
-cacalaqui
 calaqui
-tenepantlan
-tetzalan
 cuauhtzalan
 atitlan
 intzalan
@@ -14209,8 +14186,6 @@ tlapacaloni
 tlapacani
 xochimohpaltic
 paca
-camapaca
-momatequia
 tlatzohuazilpilli
 tzohua
 tzohuatztli
@@ -14224,8 +14199,7 @@ axoxouhquilitl
 chihtitl
 tolchicuatli
 amoxpohuani
-amoxitoa
-pohua
+amoxpohua
 tlacanahuatilli
 altepetlalilli
 ixcuitlatl
@@ -14343,6 +14317,7 @@ Letonia
 tlahtolmachiotl
 xocotextli
 mehuatiquetzqui
+mehua
 etipepenani
 mehuatiquetzquiliztli
 pepenaliztli
@@ -14412,6 +14387,7 @@ tetlauhtiliztli
 tetlauhtiani
 chipahua
 pohpoa
+calchipahua
 camapopoa
 tetzacayotl
 iztamiztli
@@ -16734,11 +16710,11 @@ chilmamolli
 chilcaxitl
 apancholoani
 chapolli
-tzicuini
+choloa
 huehcacholoa
 apancholoaniliztli
 pacayeliztli
-tlapaloa
+tetlahpaloa
 tlapaloliztli
 tetlapololiztli
 cozcatl
@@ -16907,16 +16883,11 @@ inic chicuace
 ahuilneyo
 ahuilneyotl
 itocaltzatontli
-xoxoni
-intla
-quemacatzin
 intla aca
 tlamo
 quemah
-s
 coztactli
-CTA
-nonchipa
+nochipa
 canahuacantli
 tepetlan
 chicome
@@ -16926,7 +16897,6 @@ nezcayotia
 tliltetlanilli
 cemilhuitlapoalli
 machiotl
-Cihuatan
 Cihuatepec
 necahualiztli
 tzinicpalli
@@ -17093,7 +17063,7 @@ huelicayo
 pachoaloani
 tlecoliztli
 tlecohuilli
-tleco
+tlehco
 acana
 etia
 tlecohuia
@@ -17125,7 +17095,7 @@ ichcatetectli
 huipiltetectli
 tlaihiyohuani
 tlaihiyohualiztli
-tlaihiyohua
+yolcocoa
 atletini
 atletilia
 mictilia
@@ -17846,18 +17816,9 @@ tepahuaniani
 tepanahui
 pehua
 tepanahuilli
-amoxnamacac
-amanamacac
-xochicopalnamacac
-tlapalnamacac
-tlamanamacac
-namaco
-namacatic
+tlanamaca
 tencualactli
-temictli
-venezollatl
 venezoltecatl
-Venezollan
 tlahuelquixtiliztli
 tlahuelquixtia
 huiquia
@@ -17866,10 +17827,8 @@ tlapanahuiliztli
 tlanexillotl
 tlachialoyan
 tonquitli
-itta
 cecemitta
 cochitia
-tlachia
 ihta
 Totonicapan
 totonicatecatl
@@ -17902,6 +17861,7 @@ ohcalli
 tilmahuatl
 tepaltlahtolli
 quentia
+motlaquentia
 tlachichihualoyan
 ticiyolcani
 micatilmahuac
@@ -17981,7 +17941,7 @@ tecuatlacoatl
 tlahtolloliztli
 celticaquiztli
 chachaiaquiztli
-patlani
+patlaiani
 patlani
 patlantiquiza
 papalani
