--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 		</div>
 		 
 <div class="caxtilancopa">
+hormiguero
 a alguna parte
 a buen tiempo
 a cada uno
 a continuación al instante
-A Coruña
 a cual
 a el
 a espaldas
@@ -64,12 +64,8 @@ a veces
 a veces
 a vosotros
 ababol
-abacería
 abacero
 abad
-abadesa
-abajo
-abajo
 abajo
 abalanzar
 aballestar
@@ -161,8 +157,6 @@ acabar
 academia
 acaecer
 Acajutla
-Acalometochtli
-Acamapichtli
 acamaya
 acampanado
 acanalado
@@ -185,7 +179,6 @@ acatar
 acatólico
 Acatzingo
 acaudillar
-Acayucan
 acceso de la ciudad
 acceso
 accesorio
@@ -392,6 +385,7 @@ agrupación
 agrupar
 agrura
 agruras
+agua
 agua caliente
 agua de frutas
 agua de nixtamal
@@ -424,9 +418,6 @@ aguanieve
 aguantado
 aguardar
 aguardiente
-aguardiente
-aguas
-Aguascalientes
 aguautle
 agudeza
 agudo
@@ -668,13 +659,8 @@ amarrado
 amarrar
 amasar
 amate
-Amatepec
-Amatitlan
-Amatlán
 ámbar
 ambidiestro
-Amealco
-Amecameca
 amén
 amenaza
 amenazado
@@ -688,7 +674,6 @@ amigo de corazón benévolo
 amigo
 amiguito
 amiguitos
-Amimitl
 amistad
 amistad
 amistoso
@@ -1259,6 +1244,7 @@ baile
 Baja California
 Baja California Sur
 bajar
+descender
 bajo
 bala
 balacera
@@ -2015,7 +2001,7 @@ cerrar herida
 cerrar la boca
 cerrar la mano
 cerrar los ojos
-cerros
+cerro
 cervato
 cerveza
 cesta de palma
@@ -2557,7 +2543,6 @@ corazón limpio
 corazón
 corazón precioso
 corazonada
-corazoncito
 corazones
 corbata
 corcho
@@ -2603,6 +2588,7 @@ corto
 cosa
 coscorrón
 cosecha
+cosecha
 cosechador
 cosechador
 cosechar
@@ -2623,6 +2609,8 @@ cotorra serrana
 cotorra serrana
 cotorro australiano
 cotorro
+Lugar que posee coyotes
+coyote
 coyotero
 coyuntura
 cráneo
@@ -2657,7 +2645,6 @@ criterio
 crítica
 criticar
 croar
-croata
 cromado
 cromar 
 cromo
@@ -2686,7 +2673,7 @@ cuajado
 cuajar
 cuajarse
 cuajilote
-Cuajimalpa
+Donde se talla madera
 cuajo
 cualquiera
 cualquier
@@ -2715,6 +2702,7 @@ cuchara
 cucharada
 cucharón de acero
 cucharón de madera
+Lugar donde desciende el águila
 cuchillada
 cuchillo
 cuello
@@ -3592,6 +3580,7 @@ en todas partes
 en unomento
 en vano
 en
+sobre
 enaguas
 enamorado
 enano
@@ -3880,9 +3869,6 @@ escudarse
 escudero
 escudo
 escuela
-escuela
-Escuinapa
-Escuintla
 esculpido
 esculpir
 escultor 
@@ -4061,6 +4047,8 @@ examinar
 excavar
 exclamación
 exclamar
+excreción
+excremeto
 existencia
 exitaciónemenina
 exitaciónasculina
@@ -4235,7 +4223,7 @@ flor de tulipán
 flor olorosa
 floreado
 florero
-flores
+flor
 floricultor
 flota del barco 
 foco
@@ -4519,9 +4507,6 @@ guardar
 guardarse
 guardián
 guardián
-Guatemala
-guatemalteco
-guatemalteco 
 guayaba
 guayabo
 guayacán
@@ -4534,10 +4519,6 @@ Guerrero
 guerrero águila
 guerrero tigre
 guía
-Guinea
-Guinea Bissau
-Guinea ecuatorial
-guineano
 guirnalda delores
 guitarrista
 gula
@@ -4579,6 +4560,7 @@ hace varios días
 hacer
 hacer agujeros
 hacer dar vueltas al agua
+Cerro de malacates lugar de altares
 hacer dinero
 hacer llorar
 hacer reír
@@ -4747,7 +4729,6 @@ horizonte
 hormiga
 hormiga reina
 hormiguear
-hormiguero
 horno de pan
 horno
 hortaliza
@@ -4775,7 +4756,6 @@ Huatusco
 Huauchinango
 hueco
 hueco
-Huehuecoyotl
 Huehuetenango
 Huehuetoca
 Huehuetotetl
@@ -5209,84 +5189,7 @@ legua
 lejano
 lejía
 lejos
-lengua afgana
-lengua alemana
-lengua árabe
-lengua armenia
-lengua australiana
-lengua azerbaiyana
-lengua belga
-lengua bierlorrusa
-lengua bulgara
-lengua camboyana
-lengua castellana
-lengua catalana
-lengua coreana
-lengua croata
-lengua danesa
-lengua eslovaca
-lengua eslovena
-lengua española
-lengua estonia
 lengua
-lenguailipina
-lenguainlandesa
-lenguarancesa
-lengua gallega
-lengua georgiana
-lengua griega
-lengua guaraní
-lengua hindi
-lengua holandesa
-lengua huasteca
-lengua húngara
-lengua indonesa
-lengua inglesa
-lengua irlandesa
-lengua islandesa
-lengua italiana
-lengua ixcateca
-lengua japonesa
-lengua judía
-lengua kazaja
-lengua latina
-lengua letona
-lengua lituana
-lengua luxemburguesa
-lenguaacedonia
-lenguaandarina
-lenguaapuche
-lenguaatlaltzinca
-lenguaaya
-lenguaazahua
-lenguaexicana
-lenguaixe
-lenguaixteca
-lenguaongola
-lengua náhuatl
-lengua noruega
-lengua otomí
-lengua pima
-lengua polaca
-lengua popoluca
-lengua portuguesa
-lengua quechua
-lengua romance
-lengua romaní
-lengua rumana
-lengua rusa
-lengua sudafricana
-lengua sueca
-lengua tailandesa
-lengua tanzana
-lengua tarasca
-lengua tlahuilca
-lengua turca
-lengua ucraniana
-lengua vasca
-lengua vietmanita
-lengua zapoteca
-lenguaje coloquial
 lenguaje culto
 lenguaje limpio
 lenguaje
@@ -5474,6 +5377,7 @@ lomo
 lonchera
 Londres
 longaniza
+Sobre lozas en agua
 losa
 loza de talavera
 loza
@@ -5513,6 +5417,7 @@ maculís
 madagascarense
 madera de palma
 maderaina
+madera
 madero
 madero
 madrastra
@@ -5566,9 +5471,7 @@ Maldivas
 maleta
 maleza 
 malicia 
-malinalca
-malinés
-malinés
+malacate
 malla
 mallaetálica
 malo
@@ -6149,10 +6052,6 @@ nevar
 Nextlalpan
 Nezahualcoyotl
 Nezahualpilli
-ni
-ni-
-ni
-Nicaragua
 nido
 nido de pájaro
 niebla
@@ -6353,10 +6252,8 @@ ordeñado
 orégano
 oreja
 órgano
-órganoúsical
 orgasmo
 orgía
-orientación solar
 oriental
 oriente
 orina
@@ -6523,8 +6420,6 @@ paradigma
 parado
 paraguas azteca 
 paraguas
-Paraguay
-paraguayo
 paraíso celestial
 paraíso
 paraíso terrenal
@@ -6624,8 +6519,7 @@ pavos
 payasada tontería
 paz
 paz
-pe
-pecadoortal 
+pecado mortal 
 pecar
 pececillos
 pechero
@@ -7638,8 +7532,7 @@ rosa
 rosal
 rosario
 rosca
-roseta deaíz
-rri
+Lugar en el que se cosechan flores
 ruda
 ruda
 rueda
@@ -7661,7 +7554,6 @@ sabios
 sacacorchos
 sacado
 sacar
-Sacatepequez
 sacerdocio
 sacerdotes
 saco
@@ -7821,15 +7713,12 @@ semejante 
 semejar
 semen
 semental
-sementera
 semilla de abrojo
 semilla
 semillero
 sencillamente
 sencillez
 sencillo
-Senegal
-senegalés
 seno
 sensible
 sensual
@@ -7875,8 +7764,6 @@ servido
 servidor
 servir
 setenciado auerte
-setenta
-setenta y cinco
 sexo
 sexto
 sexual 
@@ -7912,17 +7799,15 @@ simulador 
 simular
 sin consideración 
 sin convicción
-sinedida
+sin medida
 sin número
 sin rumbo
 sin valor
-sinagoga
 Sinaloa
 sinaloense
 sincel
 sindorme de Down
 síndrome
-Singapur
 singular
 sino
 sintetizar
@@ -7992,7 +7877,6 @@ solo
 soltar
 soltera
 soltero
-somalí
 Somalia
 sombra de árbol 
 sombra de persona 
@@ -8008,8 +7892,6 @@ sonar bien
 sonido agudo
 sonido
 sonidoetálico de un choque
-Sonora
-sonorense
 sonoridad
 sonrojar
 sonrrojado
@@ -8069,8 +7951,6 @@ subirse
 súbitamente
 submarino
 succionar
-Súchil
-Suchitoto
 suciedad
 sucio
 sucio
@@ -8078,7 +7958,6 @@ sudadera
 sudar
 sudor
 sudoración
-Suecia
 sueco
 suegra
 suegro
@@ -8118,7 +7997,6 @@ sur
 surco
 sureño
 surgimiento
-Surinam
 sus piernas
 sus rayos luminosos 
 suspirar
@@ -8134,8 +8012,6 @@ sutura
 tabaco
 tabajo
 tabano
-Tabasco
-tabasqueño
 tabique
 tabla
 tablero de canasta
@@ -8146,7 +8022,6 @@ tachado
 tachar
 taco de billar
 taco
-Tacuba
 tajado
 tajar
 tal cual
@@ -8251,7 +8126,6 @@ tecnología
 tecnológico
 Tecolutla
 Tecozautla
-Tecpan de Galeana
 Tecuala
 tecuilhuitontli
 Tegucigalpa
@@ -8286,8 +8160,6 @@ temblar deiedo
 temblar
 temeroso
 temeroso
-Temixco
-Temoaya
 temor
 temor
 tempestad
@@ -8298,8 +8170,6 @@ templo
 Templo Mayor
 temprano
 temprano
-Tenancingo
-Tenayuca
 tenazas
 tender
 tendero
@@ -8334,21 +8204,17 @@ tener
 teniente
 tenis
 tenis
-tenochca
-Tenochtitán
 tentación
 tentador
 tentar
 teñidura
-Teotepeque
-Teotihuacan
-teotihuacano
 Teotitlan del Valle
 tepache
 tepache
 Tepalcatepec
+Lugar de la casa de sal
 tepaneca
-Tepeaca
+En la nariz del cerro
 Tepeapulco
 Tepejí del Río
 tepetate
@@ -8358,8 +8224,6 @@ tepezcuintle
 Tepic
 Tepito
 tepojal
-teponaztle
-Tepotzotlán
 tepozán
 Tepoztlán
 Tequila
@@ -8399,7 +8263,6 @@ testamento
 testamento 
 testículo
 Tetelcingo
-Texcoco
 tez
 Tezcatlipoca
 Teziuhtlán
@@ -8415,7 +8278,7 @@ tiburón
 tiempo atrás
 tiempo de cosechar
 tiempo de esperanza
-Tiempo derutas
+Tiempo de frutas
 tiempo de la cosecha
 tiempo
 tiempo presente
@@ -8433,18 +8296,16 @@ tierra española
 tierra
 Tierra
 tierra
-tierrairme
+tierra firme
 tierra gruesa
 tierra hovohispana
-tierra levantada
-Tierra Mexicana
+montículo
 tiesto
 tifoidea
 tigre acuático
 tigre dientes de sable
 tijeras de cocina
 tijeras
-Tilaco
 tildío
 timidez
 tímido
@@ -8485,26 +8346,9 @@ Tlacotalpan
 tlacoyo
 tlacoyo
 tlacuache
-Tlahuac
-Tlahuelilpan
-tlahuica
-Tlalmanalco
-Tlalnepantla
-Tlaloc
-Tlalpujahua
-Tlaltecuhtli
-Tlanchinol
-Tlapala
+tlahuac
+cuitlahuac
 tlapalería
-Tlapan
-tlaquixtilli
-tlascalate
-Tlatelolco
-Tlaxcala
-tlaxcalteca
-tlaxcaltequidad
-Tlaxcoapan
-tlaxochimaco
 tobillo
 tocado
 tocador
@@ -8523,10 +8367,6 @@ todo elundo
 todos
 todos nosotros
 todos ustedes
-Togo
-Tokio
-toloache
-Toluca
 tolvanera
 tomar prestado
 tomar
@@ -8535,8 +8375,6 @@ tomar
 tomate amarillento
 tomate
 Tomatlán
-Tonalá
-Tonatico
 tonto
 tonto
 topado
@@ -8568,11 +8406,6 @@ tosco 
 tostado
 tostador 
 tostar
-totonaco
-totopo
-Tototlán
-toxcatl
-tozoztontli
 trabajador
 trabajar
 trabalenguas
@@ -9011,8 +8844,6 @@ zapato de cuero 
 zapato de piel de jaguar
 zapato deportivo
 zapato
-zapatos
-Zapopan
 zapotal
 zapote blanco
 zapote grande
@@ -9025,8 +8856,6 @@ zapotero negro
 zarza
 zarzamora
 zarzamora
-Zempoala
-zi
 zodoacal
 zonaría
 zoológico
@@ -9038,16 +8867,14 @@ zorro rojo
 zotol
 zueco
 zumbido
-Zumpango
-zurcir
 </div>
 
 <div class="nahuatl">
+azcapotzalco
 canah
 yeccan
 cecenyaca
 niman
-Corunia
 canyepan
 quin
 cuitlapan
@@ -9065,12 +8892,8 @@ quimaca
 quemanian
 amech
 amapotl
-xiuhcaloyan
 xiuhcani
 teoyotica tepachoani
-cihuateoyotica tepachoani
-ixiptla
-itzintla
 tlani
 cuitlaxeloa
 tepoztlahuitoloa
@@ -9162,8 +8985,6 @@ tlami
 toltecalli
 mochihua
 Acaxotlan
-Acalometochtli
-Acamapichtli
 acamayatl
 tanatic
 huacaltic
@@ -9186,7 +9007,6 @@ ixtilia
 tlalnetoquini
 Acatzinco
 nitemana
-Acayocan
 altepecalocoayan
 calocoayan
 tlacacozcatl
@@ -9393,6 +9213,7 @@ ololohuiztli
 ololohua
 xocoliztli
 elchichinatl
+atl
 atotonqui
 xocoatl
 nexayotl
@@ -9424,10 +9245,7 @@ menecuhtli
 acetl
 ehuatoc
 pielia
-iliztli
 atletl
-aa
-Aguascalientes
 ahuauhtli
 tenaccayotl
 tenatic
@@ -9669,13 +9487,8 @@ ilpitoc
 ilpia
 texhui
 amacuahuitl
-Amatepec
-Amatitlán
-Amatlan
 cozahuitl
 necocmomatqui
-Ameyalco
-Amaquemecan
 mayuhmochihua
 atemauhtiliztli
 atemauhtilli
@@ -9689,7 +9502,6 @@ icnoyohuani
 icniuhtli
 icniuhpilli
 icniuhpipil
-Amimitl
 icniuhyotl
 cemicniuhyotl
 icniuhyo
@@ -10259,6 +10071,7 @@ mitotiliztli
 mitotilli
 Mexicatl California
 Mexicatl California Huitztlan
+temo
 temo
 ahuatetztli
 tepoztlachtli
@@ -11016,7 +10829,7 @@ tetzolihui
 camapiqui
 mapiqui
 ixpiqui
-tepemeh
+tepetl
 mazaconetl
 teixhuinotl
 tanatli
@@ -11558,7 +11371,6 @@ yoloiztac
 yolotli
 cozcayollotl
 yoloyotl
-yolotzintli
 yoyolo
 quechmecatl
 cuauhzonectli
@@ -11603,6 +11415,7 @@ tocapantli
 tichtic
 tlamantli
 cuatepinilli
+milli
 pixquitl
 pixcaltequi
 yelimiqui olinqui
@@ -11624,6 +11437,8 @@ chiltepetototl
 quilitototl
 alotexotli
 quitototl
+coyoacan
+coyotl
 coyohuac
 zaliuhyantli
 cuacalaccantli
@@ -11658,7 +11473,6 @@ popohuayotl
 popohuaztli
 popohua
 cataloa
-coaxitecatl
 petlactic
 petlacui
 petlactli
@@ -11687,7 +11501,7 @@ tlatetzauhlli
 tlatzacuana
 tlatzacuania
 cuauhxilotl
-Cuauhximalpan
+Cuajimalpa
 tlatzacuaniliztli
 ahquinzazo
 tlenzazo
@@ -11716,6 +11530,7 @@ xonpepetl
 matlacualxopiloni
 tepozneloani
 cuauhneloani
+cuauhtemoc
 tepoztehuitequilli
 tlaxotlahuiqui
 quechtli
@@ -12593,6 +12408,7 @@ nohuiyampa
 aocmo huacauh
 zanezpanca
 ipan
+ipan
 cueyetl
 moyoleuhqui
 tzapatl
@@ -12881,9 +12697,6 @@ chimalcaltia
 chimalqui
 chimalli
 tlamachtilcalli
-nemachtiloyan
-Itzcuinapan
-Itzcuintlan
 tlacuicuitl
 cuicuiloa
 tlacuicuilo
@@ -13062,6 +12875,8 @@ tlatlachia
 tataca
 maucatzaliztli
 maucatza
+cuitlatl
+cuitlatl
 catl
 cihuahuiayaliztli
 tepolcuauhtiliztli
@@ -13236,7 +13051,7 @@ xochitolipan
 cacahuaxochitl
 xochimoyehuac
 necocuillotecomatl
-xochimeh
+xochitl
 xochimanqui
 acalli cemantihuitztli
 tehuilotlahuilmeyallotl
@@ -13520,9 +13335,6 @@ pia
 pia 4
 tlapiani
 pixqui
-Cuauhtemallan
-cuauhtemalatl
-cuauhtemaltecatl
 xaxocotl
 xaxocuahuitl
 matlacuahuitl
@@ -13535,10 +13347,6 @@ Cihuatlan
 yaocuauhtli
 yaocelotl
 teyacaniliztli
-Ginea
-Ginea Bisao
-Ginea Nepantlan
-gineatl
 xochicuaitl
 mecahuehuecuicani
 apitzotl
@@ -13580,6 +13388,7 @@ yectel
 ayi
 colonia
 amamalacahoa
+malacachtepec momoxco
 achihuatia
 choquiltia
 huetzquitia
@@ -13748,7 +13557,6 @@ ahuemaniliztli
 azcatl
 tlaletzatl
 cuecueyoca
-azcaxalli
 tlecalpantli
 xamixcaltexcaxitl
 quilitlan
@@ -13776,7 +13584,6 @@ Cuauhtochco
 Cuauhchicnauhco
 acatic
 cacahuatic
-Huehuecoyotl
 Huehuetenanco
 Huehuetocac
 Huehuetotetl
@@ -14210,84 +14017,7 @@ netlalolli
 ahuehca
 nexatl
 huehca
-afganitlahtolli
-teutontlahtolli
-arabiatlahtolli
-armeniatlahtolli
-austlaliatlahtolli
-azebaiyatlahtolli
-belxicatlahtolli
-belarruxiatlahtolli
-bulgariatlahtolli
-cambodiatlahtolli
-caxtiltlahtolli
-catalantlahtolli
-coriatlahtolli
-coaxiatlahtolli
-daniatlahtolli
-eslovaquiatlahtolli
-esloveniatlahtolli
-hispantlahtolli
-estoniatlahtolli
 nenepilli
-filipintlahtolli
-fillantlahtolli
-gallitlahtolli
-galixiatlahtolli
-georgiatlahtolli
-helenotlahtolli
-parahuariatlahtolli
-indiatlahtolli
-hollandatlahtolli
-cuextecatlahtolli
-hungariatlahtolli
-indonesiatlahtolli
-anglitlahtolli
-irllantlahtolli
-isllandatlahtolli
-itlaliatlahtolli
-ichcatecatlahtolli
-xapotlahtolli
-yudiotlahtolli
-cazaxtaniatlahtolli
-latintlahtolli
-letoniatlahtolli
-litoaniatlahtolli
-luxenborgiatlahtolli
-macedoniatlahtolli
-xinatlahtolli
-mapochetlahtolli
-matlaltzincatlahtolli
-mayatlahtolli
-mazahuatlahtolli
-mexicatlahtolli
-mixetlahtolli
-mixtecatlahtolli
-mongoliatlahtolli
-nahuatlahtolli
-norvegiatlahtolli
-otomitlahtolli
-pimatlahtolli
-polontlahtolli
-popolocatlahtolli
-lusotlahtolli
-quechoatlahtolli
-rromatlahtolli
-andaloxitlahtolli
-rromaniatlahtolli
-rruxiatlahtolli
-africatlahtolli
-zuecatlahtolli
-taillantlahtolli
-tanzaniatlahtolli
-michoacatlahtolli
-Tlahuilcatlahtolli
-turquiatlahtolli
-uclaniatlahtolli
-vaxcatlahtolli
-vietnamiatlahtolli
-zapotlahtolli
-macehualtlahtolli
 tecpiltlahtolli
 chipahuacatlahtolli
 hueltlahtolli
@@ -14475,6 +14205,7 @@ cuitlaxiloyotl
 itacaxitl
 Londin
 coyamecuitlaxcotli
+iztapalapa
 iztapalli
 xiuhtecomatl
 tlacualtepalcatl
@@ -14514,6 +14245,7 @@ icotl
 madagascariatl
 zoyacuahuitl
 cuauhquetzalli
+cuahuitl
 cuauhtolli
 cacaxtli
 tlacpanantli
@@ -14567,9 +14299,7 @@ Maldiviah
 ehuapetlacalli
 acahuatl
 acuallotl
-malinalcatl
-maliatl
-malitecatl
+malacachtli
 tlahuiztli
 tepozmatlatl
 amocualli
@@ -14940,7 +14670,7 @@ tepetontli
 Monterrey (Tlahtoantepec)
 Tlahtoantepec
 Videotepec
-tlalmontontli
+potzalli
 centlalilli
 tlacuicuiliztli
 amacapolin
@@ -15150,10 +14880,6 @@ cepayahui
 Nextlalpan
 Nezahualcoyotl
 Nezahualpilli
-nian
-ni-
-n
-Nicanahuac
 chantli
 tapazolli
 ayahuitl
@@ -15354,10 +15080,8 @@ tlapatzquilli
 ahuiyaxihuitl
 nacaztli
 huitztlaocotl
-ehuatlapitzalhuehuetl
 ahuiayotl
 hueyahuilnemiliztli
-iquizahuayancayotl tonatiuh
 iquizayo
 iquizayan
 axixliztli
@@ -15524,8 +15248,6 @@ amozayotl
 telquetzaqui
 nehualpetlatl
 tzotzomahquiahpalehui
-Parahuaria
-parahuatecatl
 ilhuicatliltic
 xochitlalpan
 xochitlalpan
@@ -15625,7 +15347,6 @@ huexolomeh
 xolopiyotl
 tlamatcayeliztli
 yocoxcayotl
-p
 temictlahtlacolli
 tlacoa
 michtoton
@@ -16639,8 +16360,7 @@ xochipaltic
 xochizuatlan
 teocuauhmecatl
 tlaxcalcolli
-izquixochitl
-r
+xochimilco
 coapatli
 acuatzin
 temalacatl
@@ -16662,7 +16382,6 @@ tlamatinimeh
 tepozcuauhnectli
 tlaquixtilli
 quixtia
-Zacatepec
 teopixcayotl
 teopixque
 tlamamalli
@@ -16822,15 +16541,12 @@ acantetlanehui
 nenehuilia
 tepolayotl
 xinachyo
-milli
 petzicatl
 xinachtli
 xinaloani
 cemaniliztica
 motolincayotl
 centlaixtli
-Senegallia
-senegatl
 chichihualli
 nematini
 tlaelpaquini
@@ -16876,8 +16592,6 @@ tetlayecotilli
 tlayecotiloni
 tlayecotia
 miquitlatzontequiloc
-yempoalomatlactli
-yempoaloncaxtolli
 ahuilneliztli
 inic chicuace
 ahuilneyo
@@ -16917,13 +16631,11 @@ aihuiayo
 zantlapohualtin
 ahuicpa
 amotlazoyotl
-yudioteocalli
 Xinaloac
 xinaloatl
 tepozcuiloni
 xoalli
 iteztlahtlacolli
-Singapuria
 moncuamoqui
 amozan
 hueyaquilia
@@ -16993,7 +16705,6 @@ icel
 macahua
 oquichtlanqui
 cihuatlanqui
-somaltecatl
 Somalia
 zacachimalli
 tonameyotl
@@ -17009,8 +16720,6 @@ nahua
 yolo
 tzatziliztli
 calani
-Xonotan
-xonotecatl
 nahuayotl
 ixchichilca
 ixchichilihui
@@ -17070,8 +16779,6 @@ tlecohuia
 atenamachpan
 tepozacamitl
 chichina
-Xochitl
-Xochitotoc
 catzahualiztli
 catzactic
 tzoyoc
@@ -17079,7 +16786,6 @@ itocalnetzhuiliztli
 neitonalia
 neitonalli
 neitonaliztli
-Zuecapan
 zuecatl
 monnantli
 montahtli
@@ -17119,7 +16825,6 @@ huitztlan
 copichahui
 huitztlani
 izcalli
-Surinamia
 imetzhuan
 itonalmeyotzitzihuan
 elcicihui
@@ -17135,8 +16840,6 @@ queanatzincac
 yetl
 tequitl
 tecmilotl
-Onohualco
-onohualtecatl
 tepanpitzahuac
 huapalli
 chiquiuhmachiotl
@@ -17147,7 +16850,6 @@ tlaxinililli
 tlaxinilia
 tlacolpatolli
 tlaco
-Tlacopan
 tetecqui
 tetequi
 maciuhqui
@@ -17252,7 +16954,6 @@ amantecayotl
 tecnoloyo
 Tecolotlan
 Tecozauhtlan
-Tecpan
 Tecuanlan
 tecuilhuitontli
 Tecuhtzincalpan
@@ -17287,8 +16988,6 @@ cuacenihui
 papatlaca
 neizahuiliztli
 temamauhtli
-Temizco
-Temoayan
 tlamauhtiliztli
 teitzauhtiliztli
 ehecaquiahuitl
@@ -17299,8 +16998,6 @@ teocalli
 Huey Teocalli
 ocualcan
 ayacuael
-Tenantzinco
-Tenayocan
 tepoztlaloni
 zoa
 tianamacac
@@ -17335,21 +17032,17 @@ imacaci
 yaocallapixqui
 tenixliztli
 tenix
-tenochcatl
-Tenochtitlan
 teyeyecoyotl
 teyeyecoani
 yeyecoa
 tlapaliztli
-Teotepec
-Teotihuacan
-teotihuacatl
 Teotitlan
 tepachnecuhtli
 tepeachnecuhtli
 Tepalcatepec
+iztacalco
 tepanecatl
-Tepeyacac
+tepeyac
 Tepeapolco
 Tepexic
 tepetlatl
@@ -17359,8 +17052,6 @@ tepeitzcuintli
 Tepic
 Tepiton
 tepoxalli 
-teponaztli
-Tepotzotlan
 axixcuahuitl
 Tepoztlan
 Tequillan
@@ -17400,7 +17091,6 @@ nemiquiznahuatiliztli
 miquiznahuatiliztli
 ahuacatl
 Tetetzinco
-Tezcococ
 ixtetzahuacac
 Tezcatlilpoca
 Texiuhtlan
@@ -17434,18 +17124,16 @@ hispantlalli
 tlalli
 cemtlalticpac
 tlalticpactli
-cemanantlalli
+tlalpan
 atoctli
 anahuatlalli
 potzalli
-Mexicatlalli
 topalcatl
 matlalzahuatl
 aocelotl
 cuitlamiztli
 tepozcotoni
 tepozximani
-Tlilaco
 amacoztitototl
 mauhcayotl
 ixmauhqui
@@ -17486,26 +17174,9 @@ Tlahcotlalpan
 tlatloyotl
 tlacoyotl
 tlacuatzin
-Tlalhuac
-Tlahuelilpan
-tlahuicatl
-Tlalmanalco
-Tlalnepantlan
-Tlaloc
-Tlalpoxohuac
-Tlaltecuhtli
-Tlanchinoltic
-Tlapallan
+Fertilizante
+Fertilizante
 tlapalcoyan
-Tlalpan
-arrancado
-tlaxcalatl
-Tlaltelolco
-Tlaxcallan
-tlaxcaltecatl
-tlaxcalayotl
-Tlachcoapan
-tlaxochimaco
 quequeyolli
 cuachicquilli
 cuauhtezcacalli
@@ -17524,10 +17195,6 @@ nochitlacah
 nochtin
 tinochtin
 nanmochtzitzintin
-Toco
-Toquio
-toloatzin
-Tollocan
 yohualtetzahuitl
 tlanehuia
 cui
@@ -17536,8 +17203,6 @@ ana
 coztomatl
 tomatl
 Tomatlan
-Tonallan
-Tonatiuhco
 pinotl
 xolopitli
 tenamicqui
@@ -17569,11 +17234,6 @@ ayocozqui
 tlacectli
 tlatehuatzani
 tlahuetza
-totonacatl
-totopochtli
-Tototlan
-toxcatl
-tozoztontli
 tequitini
 tequipanoa
 camanallatolli
@@ -18012,8 +17672,6 @@ ehuacactli
 ocelonacactli
 olcactli
 cactli
-cactin
-Tzapopan
 tzapocuahuitlan
 cochitzapotl
 cuatzapotl
@@ -18026,8 +17684,6 @@ tliltzapocuahuitl
 huetztlapalli
 huatzactli
 huatzacuahuitl
-Cempoallan
-z
 tonallo
 cehuayan
 yolcacuauhtlan
@@ -18039,8 +17695,6 @@ cuetlaxcoyotl
 zotolli
 cuauhcactli
 zozolocaliztli
-Tzompanco
-chihchi
 </div>	 
 		 
 	 </body>
